--- a/ai-service/.gitignore
+++ b/ai-service/.gitignore
@@ -4,34 +4,36 @@ __pycache__/
 *$py.class
 *.so
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
 venv/
 env/
 ENV/
 .venv
 
-# YOLO models
+# Environment Variables
+.env
+
+# Models
+models/
 *.pt
 *.onnx
-*.engine
-
-# Video files
-*.mp4
-*.avi
-*.mov
-*.mkv
-
-# Uploads and outputs
-uploads/*
-!uploads/.gitkeep
-outputs/*
-!outputs/.gitkeep
-
-# Logs
-*.log
-logs/
-
-# Environment
-.env
+*.weights
 
 # IDE
 .vscode/
@@ -44,10 +46,17 @@ logs/
 .DS_Store
 Thumbs.db
 
-# Jupyter
-.ipynb_checkpoints/
+# Logs
+*.log
+logs/
 
 # Testing
 .pytest_cache/
 .coverage
 htmlcov/
+
+# Jupyter Notebook
+.ipynb_checkpoints
+
+# PyCharm
+.idea/
